= Next Release: 3.1

 - Return error code indicating exit reason after handling signals
 - Use a process group to ensure that wrapper scripts do not prevent signals
   from reaching child processes

= Release History

== 3.0: December 19, 2014

 - Man page highlights the flexibility of executing a commands using a shell
 - 'reload-browser', a cross-platform script for reloading the current tab in
   one or more browsers
 - system_test.sh auto-upgrades to bash if the default shell does not support
   the ERR trap
 - Workaround implemented for Linux using fstat(2) to detect if a binary was
   removed if inotify issues IN_ATTRIB but not IN_DELETE_SELF
 - Use calloc(3) to take advantage of overflow detection

== 2.9: June 10, 2014

 - RPM package by @funollet
 - Moved alternate Makefiles to contrib/
 - Trigger actions when a file is truncated on BSD
 - Improved format of DEBUG messages
 - Added missing extern for missing/fmemopen.c to avoid warning on MacOS 10.7+
 - No longer register NOTE_EXTEND; this event is not always merged with
   NOTE_WRITE on MacOS
 - New directory-watch option ('-d'). In this mode a shell while-loop can be
   used to track the addition of new files.


== 2.8: March 15, 2014

 - Iteratively check for new file system events using a 1ms timeout after a file
   has been renamed or removed in order to prevent the utility from being
   executed before successive changes from a version control system have
   completed.
 - Regression tests are now system tests that depend on and use Vim and
   Mercurial
 - Timing on regression tests has been tightened to only support real hardware;
   they are not expected to pass in emulated environments.
 - More correctly identify the first file to trigger a file change notification
 - Regression tests no longer require ksh
 - Renamed regress.sh to system_test.sh

== 2.7: February 12, 2014

 - Changed function pointer prefixes from '_' to 'x' to avoid runtime symbol